src/objects/StudentDegreePlans__c.object
<CustomObject>
    <description>Student instance of a WGU degree plan, provisioned from the WGUDegreeProgram__c object.</description>
    <fields>
        <fullName>ApprovalDate__c</fullName>
        <description>The date the approval status changed.</description>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <description>The status of the degree plan approval</description>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Mentor Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unapproved by Default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Registrar Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registrar Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registrar Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ApprovedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who approved the degree plan</description>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ApprovedStudentDegreePlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApproverName__c</fullName>
        <formula>ApprovedBy__r.FirstName &amp; &apos; &apos; &amp; ApprovedBy__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BasedOnProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the WGU Degree Program the Degree Plan is based upon. This reference provides meta information for the program itself.</description>
        <label>Based On Program</label>
        <referenceTo>WGUDegreeProgram__c</referenceTo>
        <relationshipLabel>Student Degree Plans</relationshipLabel>
        <relationshipName>StudentDegreePlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentPlan__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only one degree plan can be current.</inlineHelpText>
        <label>Current Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Degree plan is approved</description>
        <label>Is Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsIncludeCurrentTerm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the calculation on UI include current term or not. Default not.</description>
        <label>Is Include Current Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MentorApprovalDate__c</fullName>
        <description>Date when the mentor approved of the degree plan.</description>
        <label>Mentor Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MentorApprovalStatus__c</fullName>
        <description>The status of the mentor approval</description>
        <label>Mentor Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Mentor Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Mentor Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unapproved by default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Registrar Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registrar Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registrar Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent plan is what this plan is originated from. When this field is empty it means the plan is confirmed one. If it is not empty, it means this plan is in editing.</description>
        <inlineHelpText>The parent plan is what this plan is originated from. When this field is empty it means the plan is confirmed one. If it is not empty, it means this plan is in editing.</inlineHelpText>
        <label>Parent Student Degree Plan</label>
        <referenceTo>StudentDegreePlans__c</referenceTo>
        <relationshipLabel>Student Degree Plans</relationshipLabel>
        <relationshipName>Student_Degree_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlannedGraduationDate__c</fullName>
        <description>Planned graduation date, only value in current plan is valid.</description>
        <label>Planned Graduation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Degree Plans</relationshipLabel>
        <relationshipName>StudentDegreePlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueStudentPlanName__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique value for StudentDegreePlan Name per student</description>
        <label>UniqueStudentPlanName</label>
        <length>96</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Student Degree Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Degree Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Degree Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>